tests/golden/defaults/firefly-iii/firefly-iii/10_helmchart/firefly-iii/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: firefly-iii
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: firefly-iii
    helm.sh/chart: firefly-iii-1.7.4
  name: firefly-iii
spec:
  rules:
    - host: firefly.local
      http:
        paths:
          - backend:
              service:
                name: firefly-iii
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - firefly.local
      secretName: firefly-tls
