tests/golden/defaults/firefly-iii/firefly-iii/10_helmchart/firefly-iii/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: firefly-iii
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: firefly-iii
    helm.sh/chart: firefly-iii-1.7.4
  name: firefly-iii
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: firefly-iii
    app.kubernetes.io/name: firefly-iii
  type: ClusterIP
